--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "lint": "standard",
     "now-build": "npm run build",
-    "build": "webpack",
-    "dev": "webpack-dev-server --history-api-fallback",
+    "build": "webpack --mode production",
+    "dev": "webpack-dev-server --open --mode development",
+    "format": "prettier --write {*.js,src/**/*.{js,jsx}}",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
@@ -24,10 +25,12 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "apollo-boost": "^0.4.7",
-    "graphql": "^14.6.0",
-    "graphql-tools": "^6.2.4",
-    "react-apollo": "^3.1.5",
+    "@babel/plugin-transform-runtime": "^7.17.10",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-react-app": "^10.0.1",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "html-loader": "^3.1.0",
     "react-icons": "^3.10.0",
     "react-redux": "^7.2.1",
     "react-responsive-carousel": "^3.2.4",
