--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "lint": "standard",
     "now-build": "npm run build",
     "build": "webpack --mode production",
-    "dev": "webpack-dev-server --open --mode development",
+    "dev": "webpack-dev-server --history-api-fallback",
     "format": "prettier --write {*.js,src/**/*.{js,jsx}}",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "git-push": "git push https://github.com/Ignacio-albornoz/Bicubica.git"
+    "serve:dev": "webpack --mode 'development' && npx serve dist -s",
+    "git:push": "git push https://github.com/Ignacio-albornoz/Bicubica.git"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
